[package]
name = "rc_car"
version = "0.1.0"
authors = ["ostrosco"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22"
imgui = "0.2"
imgui-winit-support = "0.2"
imgui-glium-renderer = "0.2"
byteorder = "1.3"
glium = "0.25"
ttf-noto-sans = "0.1"
