[package]
name = "sensorview"
version = "0.1.0"
authors = ["ostrosco"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
crossbeam = "0.7"
glium = "0.25"
image = "0.22"
imageproc = "0.19"
imgui = "0.2"
imgui-winit-support = "0.2"
imgui-glium-renderer = "0.2"
ttf-noto-sans = "0.1"
strum = "0.16"
strum_macros = "0.16"
